# trellis2-webui

./: .gitignore  README.md  app.py  package-lock.json  pyproject.toml  run_local.sh  setup_local.sh  vastai_setup.sh  vastai_template.md
patches/: decode_latent_oom_fix.py  dinov3_layer_compat.py  normal_map_bake.py  sparse_attn_sdpa.py
webui/: index.css  index.html  main.js  package.json
